# lab2

./: .gitignore  main.py  pyproject.toml  requirements.txt
examples/: bfs_example.py
search/: __init__.py  bfs.py  core.py  queues.py  visualize.py
tasks/: islands.py  maze.py  romania_graph.py  water_jugs.py
